--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "be-sayur-segar",
+  "name": "be-selodang",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   "description": "",
   "dependencies": {
     "-": "^0.0.1",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.16.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/ejs": "^3.1.5",
@@ -33,7 +33,6 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
-    "prisma": "^6.13.0",
     "save-dev": "^0.0.1-security",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
@@ -41,6 +40,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19"
+    "@types/cors": "^2.8.19",
+    "prisma": "^6.16.3"
   }
 }
